pkg/kgateway/translator/gateway/testutils/outputs/http-routing/request-redirect.yaml
Clusters:
- connectTimeout: 5s
  name: test-backend-plugin_default_example-svc_80
Listeners:
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 8080
  filterChains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: listener~8080
        statPrefix: listener~8080
        useRemoteAddress: true
    name: listener~8080
  name: listener~8080
Routes:
- ignorePortInHostMatching: true
  name: listener~8080
  virtualHosts:
  - domains:
    - gwapi.com
    name: listener~8080~gwapi_com
    routes:
    - match:
        pathSeparatedPrefix: /rule0
      name: listener~8080~gwapi_com-route-0-httproute-use-gwapi-default-0-0-matcher-0
      redirect:
        portRedirect: 8080
        responseCode: FOUND
  - domains:
    - http-default-port.com
    name: listener~8080~http-default-port_com
    routes:
    - match:
        pathSeparatedPrefix: /rule0
      name: listener~8080~http-default-port_com-route-0-httproute-http-default-port-default-0-0-matcher-0
      redirect:
        responseCode: FOUND
        schemeRedirect: http
  - domains:
    - https-default-port.com
    name: listener~8080~https-default-port_com
    routes:
    - match:
        pathSeparatedPrefix: /rule0
      name: listener~8080~https-default-port_com-route-0-httproute-https-default-port-default-0-0-matcher-0
      redirect:
        httpsRedirect: true
        responseCode: FOUND
  - domains:
    - invalid-code-char.com
    name: listener~8080~invalid-code-char_com
    routes:
    - directResponse:
        body:
          inlineString: invalid route configuration detected and replaced with a direct
            response.
        status: 500
      match:
        pathSeparatedPrefix: /rule0
      name: listener~8080~invalid-code-char_com-route-0-httproute-invalid-code-char-default-0-0-rule0-matcher-0
  - domains:
    - invalid-code-numeric.com
    name: listener~8080~invalid-code-numeric_com
    routes:
    - directResponse:
        body:
          inlineString: invalid route configuration detected and replaced with a direct
            response.
        status: 500
      match:
        pathSeparatedPrefix: /rule0
      name: listener~8080~invalid-code-numeric_com-route-0-httproute-invalid-code-numeric-default-0-0-matcher-0
  - domains:
    - replace-full-path-with-query.com
    name: listener~8080~replace-full-path-with-query_com
    routes:
    - match:
        pathSeparatedPrefix: /rule0
      name: listener~8080~replace-full-path-with-query_com-route-0-httproute-replace-full-path-with-query-default-0-0-matcher-0
      redirect:
        hostRedirect: example.com
        httpsRedirect: true
        pathRedirect: /test?foo=bar
    - match:
        pathSeparatedPrefix: /rule1
      name: listener~8080~replace-full-path-with-query_com-route-1-httproute-replace-full-path-with-query-default-1-0-matcher-0
      redirect:
        pathRedirect: //test/../other?a=1#frag
        portRedirect: 8080
        responseCode: FOUND
  - domains:
    - route-level-override.com
    name: listener~8080~route-level-override_com
    routes:
    - match:
        pathSeparatedPrefix: /rule0
      name: listener~8080~route-level-override_com-route-0-httproute-route-level-override-default-0-0-matcher-0
      redirect:
        portRedirect: 8080
        responseCode: TEMPORARY_REDIRECT
    - match:
        pathSeparatedPrefix: /rule1
      name: listener~8080~route-level-override_com-route-1-httproute-route-level-override-default-1-0-matcher-0
      redirect:
        portRedirect: 8080
        responseCode: TEMPORARY_REDIRECT
  - domains:
    - rule-level-override.com
    name: listener~8080~rule-level-override_com
    routes:
    - match:
        pathSeparatedPrefix: /rule0
      name: listener~8080~rule-level-override_com-route-0-httproute-rule-level-override-default-0-0-rule0-matcher-0
      redirect:
        portRedirect: 8080
        responseCode: TEMPORARY_REDIRECT
    - match:
        pathSeparatedPrefix: /rule1
      name: listener~8080~rule-level-override_com-route-1-httproute-rule-level-override-default-1-0-rule1-matcher-0
      redirect:
        portRedirect: 8080
        responseCode: PERMANENT_REDIRECT
    - match:
        pathSeparatedPrefix: /rule2
      name: listener~8080~rule-level-override_com-route-2-httproute-rule-level-override-default-2-0-rule2-matcher-0
      redirect:
        portRedirect: 8080
        responseCode: FOUND
Statuses:
  gateways:
    default/test:
      conditions:
      - lastTransitionTime: null
        message: Successfully accepted Gateway
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Successfully programmed Gateway
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Successfully resolved all Gateway references
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      listeners:
      - attachedRoutes: 8
        conditions:
        - lastTransitionTime: null
          message: Successfully accepted Listener
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully verified that Listener has no conflicts
          reason: NoConflicts
          status: "False"
          type: Conflicted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Listener
          reason: Programmed
          status: "True"
          type: Programmed
        name: http
        supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
  httpRoutes:
    default/http-default-port:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Route
          reason: Programmed
          status: "True"
          type: kgateway.dev/Programmed
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: test
    default/https-default-port:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Route
          reason: Programmed
          status: "True"
          type: kgateway.dev/Programmed
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: test
    default/invalid-code-char:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: |-
            Replaced Rule (0): invalid redirect status code: abc; must be one of 301, 302, 303, 307, 308
            no action specified
          reason: RouteRuleReplaced
          status: "False"
          type: kgateway.dev/Programmed
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: test
    default/invalid-code-numeric:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: |-
            Replaced Rule (0): invalid redirect status code: 200; must be one of 301, 302, 303, 307, 308
            no action specified
          reason: RouteRuleReplaced
          status: "False"
          type: kgateway.dev/Programmed
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: test
    default/replace-full-path-with-query:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Route
          reason: Programmed
          status: "True"
          type: kgateway.dev/Programmed
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: test
    default/route-level-override:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Route
          reason: Programmed
          status: "True"
          type: kgateway.dev/Programmed
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: test
    default/rule-level-override:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Route
          reason: Programmed
          status: "True"
          type: kgateway.dev/Programmed
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: test
    default/use-gwapi:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Route
          reason: Programmed
          status: "True"
          type: kgateway.dev/Programmed
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: test
